# mas_cob

mas_cob_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_bringup/launch/: jenny.launch  upload_param.launch
mas_cob_bringup/launch/components/: hokuyo_laser_rear.launch  openni.launch
mas_cob_bringup/launch/tools/: dashboard.launch  teleop_keyboard.launch
mas_cob_kinematics/mas_cob_head_kinematics/: CHANGELOG.rst  CMakeLists.txt  kinematics_plugins.xml  package.xml
mas_cob_kinematics/mas_cob_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_kinematics/mas_lwr_kinematics/: CHANGELOG.rst  CMakeLists.txt  lwr_moveit_ikfast_plugin_description.xml  package.xml
mas_cob_manipulation/mas_cob_arm_cartesian_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_manipulation/mas_cob_gripper_controller/: CMakeLists.txt  package.xml  setup.py
mas_cob_manipulation/mas_cob_gripper_controller/ros/launch/: gripper_controller.launch
mas_cob_manipulation/mas_cob_gripper_controller/ros/scripts/: gripper_controller
mas_cob_manipulation/mas_cob_gripper_controller/ros/src/mas_cob_gripper_controller/: gripper_controller.py
mas_cob_manipulation/mas_cob_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_manipulation/mas_cob_moveit/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_manipulation/mas_cob_moveit/config/: kinematics.yaml
mas_cob_manipulation/mas_cob_moveit/launch/: cob3-1_moveit_controller_manager.launch.xml  demo.launch  (+14 more)
mas_cob_manipulation/mas_cob_tactile_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mas_cob_monitoring/mas_cob_audio_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mas_cob_monitoring/mas_cob_audio_monitor/ros/scripts/: audio_monitor_node
mas_cob_monitoring/mas_cob_audio_monitor/ros/src/mas_cob_audio_monitor/: audio_monitor.py
mas_cob_monitoring/mas_cob_emergency_stop_mapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_monitoring/mas_cob_emergency_stop_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_monitoring/mas_cob_emergency_stop_monitor/ros/launch/: emergency_stop_monitor.launch
mas_cob_monitoring/mas_cob_emergency_stop_monitor/ros/src/: emergency_stop_monitor.cpp
mas_cob_monitoring/mas_cob_monitoring/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_move_arm_action/: CMakeLists.txt  README.md  package.xml  setup.py
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_move_arm_action/ros/launch/: move_arm.launch
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_move_arm_action/ros/scripts/: move_arm_action  move_arm_action_client_test
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_move_arm_action/ros/src/mas_cob_move_arm_action/: action_states.py
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_pickup_action/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_pickup_action/ros/launch/: pickup_action.launch
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_pickup_action/ros/scripts/: pickup_action  pickup_action_client_test
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_pickup_action/ros/src/mas_cob_pickup_action/: action_states.py
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_place_action/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_place_action/ros/launch/: place_action.launch
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_place_action/ros/scripts/: place_action  place_action_client_test
mas_cob_planning/mas_cob_actions/mas_cob_manipulation_actions/mas_cob_place_action/ros/src/mas_cob_place_action/: action_states.py
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_move_base_action/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_move_base_action/ros/action/: MoveBase.action
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_move_base_action/ros/launch/: move_base.launch
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_move_base_action/ros/scripts/: move_base  move_base_client_test
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_move_base_action/ros/src/mas_cob_move_base_action/: action_states.py
mas_cob_planning/mas_cob_actions/mas_cob_navigation_actions/mas_cob_navigation_actions/: CMakeLists.txt  package.xml
mas_cob_planning/mas_cob_common_states/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mas_cob_planning/mas_cob_planning/: CHANGELOG.rst  CMakeLists.txt  package.xml
mas_cob_planning/mas_cob_scenarios/mas_cob_scenarios/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_bringup/launch/: jenny.launch  robot.launch  upload_param.launch
mdr_cob_bringup/launch/tools/: dashboard.launch
mdr_cob_bringup/mdr_cob_bringup_sim/: CMakeLists.txt  package.xml
mdr_cob_kinematics/mdr_cob_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_manipulation/mdr_cob_arm_cartesian_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_manipulation/mdr_cob_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_manipulation/mdr_cob_tactile_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mdr_cob_monitoring/mdr_cob_audio_monitor/: CMakeLists.txt  package.xml  setup.py
mdr_cob_monitoring/mdr_cob_emergency_stop_mapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_monitoring/mdr_cob_emergency_stop_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_monitoring/mdr_cob_monitoring/: CHANGELOG.rst  CMakeLists.txt  package.xml
mdr_cob_planning/mdr_cob_planning/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+136 files in other folders)
