<?xml version="1.0"?>
<package>
  <name>mdr_cob_bringup</name>
  <version>1.2.0</version>
  <description>Bringup launch files for Jenny, components and tools</description>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <author email="matthias.fueller@h-brs.de">Matthias Füller</author>
  <author email="sven.schneider@h-brs.de">Sven Schneider</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mcr_default_env_config</run_depend>
  <run_depend>mcr_teleop</run_depend>
  <run_depend>cob_bringup</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>tf</run_depend>

</package>
