<?xml version="1.0"?>
<package>
  <name>mas_cob_gripper_controller</name>
  <version>1.0.0</version>
  <description>Care-O-bot-specific functionalities related to controlling the robot's gripper</description>

  <license>GPLv3</license>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>mdr_gripper_controller</build_depend>

  <run_depend>mdr_gripper_controller</run_depend>
</package>
