<?xml version="1.0"?>
<package>
  <name>mas_cob_scenarios</name>
  <version>1.2.0</version>
  <description>Demonstration and RoboCup@Home scenarios using the Care-O-Bot 3</description>


  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
