<?xml version="1.0"?>
<package>
  <name>mas_cob_place_action</name>
  <version>0.0.1</version>
  <description>The mas_cob_place_action package</description>

  <author email="roberto.mendieta@smail.inf.h-brs.de">Roberto Mendieta</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mas_cob_lwr_kinematics</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mas_cob_behavior_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>mas_cob_lwr_kinematics</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
