<?xml version="1.0"?>
<package>
  <name>mas_cob_move_base_action</name>
  <version>1.2.0</version>
  <description>A cob-specific configuration package for mdr_move_base_action</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mdr_move_base_action</build_depend>
  <build_depend>mas_cob_move_arm_action</build_depend>

  <run_depend>mdr_move_base_action</run_depend>
  <run_depend>mas_cob_move_arm_action</run_depend>

  <export></export>
</package>
